--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "debounce": "^1.1.0",
     "vue": "^2.5.13",
+    "vue-barcode": "^1.1.0",
     "vue2-dropzone": "^3.0.4"
   },
   "devDependencies": {
